--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -109,3 +109,8 @@
  .commentForm button[type=submit]:hover { 
     background: var(--green-300);
  }
+
+
+ .commentList {
+   margin-top: 2rem;
+ }
